--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "sdv>=1.0.0",
     "sdmetrics>=0.14.0",
     "typer>=0.9.0",
-    "rich>=13.0.0",    
+    "rich>=13.0.0",
+    "geomloss>=0.2.6",
 ]
 
 [tool.uv]
